--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -62,6 +62,10 @@ section {
     min-height: 95vh;
 }
 
+.text-white.mb-2 {
+    font-size: 16px;
+}
+
 .font-primary {
     color: rgb(167, 167, 167);
     font-weight: 400!important;
